@@ -32,6 +32,7 @@ Post 1.0 Stuff:
 	o API cleanup: add missing consts in function arguments
         o vim syntax
         o walker 
+        o ldns_rr_list_pop_rr_list??? I've adedd a push_rr_list.
 
 DONE:
 1.0.1 released 5 January 2006
