@@ -52,11 +52,14 @@ XX Jan 2006: 1.1.0: ldns-team
 	* ldns_zone_sort: Sort a zone
 	* ldns_bgsend(): background send, returns a socket.
 	* ldns_pkt_empty(): check is a packet is empty
+	* ldns_rr_list_pop_rr_list(): pop multiple rr's from another rr_list
+	* ldns_rr_list_push_rr_list(): push multiple rr's to an rr_list
 	Removed:
 	* ldns_resolver_bgsend(): was not used in 1.0.0 and is not used
 	  now
 	* ldns_udp_server_connect(): was faulty and isn't really part of
 	  the core ldns idea any how.
+	* ldns_rr_list_insert_rr(): obsoleted, because not used.
 
 
 18 Oct 2005: 1.0.0: ldns-team
